[FIX] web: Dialog footer buttons' spacing
Before this commit, some dialog's footer buttons were glued to each
other which impacted their readability and usability.

This commit fixes it by properly applying the existing `gap` CSS rule
which defined the spacing between the buttons, and this independently of
the structure of the footer.

Indeed, due to historical reasons, the `.modal-footer` may contain
drastically different structures depending of the kind of modal.

A non-exhaustive list of encountered structures:
- `.modal-footer > button`
- `.modal-footer > div > footer > button`
- `.modal-footer > div > button`

Note: some existing rules already illustrate that in `modal.scss`.

task-2792884

--- a/addons/web/static/src/legacy/scss/modal.scss
+++ b/addons/web/static/src/legacy/scss/modal.scss
@@ -45,15 +45,7 @@
         }
 
         .modal-footer {
-            flex-wrap: wrap;
             text-align: left;
-            justify-content: flex-start;
-
-            // TODO These rules should not be necessary if we used buttons
-            // as direct children of the modal-footer as normally required
-            > div, > footer {
-                flex: 1 1 auto;
-            }
         }
     }
 
